syntax = "proto3";

// Package name
option go_package = "github.com/TGRZiminiar/go-mc-kafka";


// Structures
message AccessTokenSearchReq {
    string accessToken = 1;

}
message AccessTokenSearchRes {
    bool isValid = 1;

}

message RolesCountReq {

}

message RolesCountRes {
    int64 count = 1;

}

// Method
service AuthGrpcService {
    rpc AccessTokenSearch(AccessTokenSearchReq) returns (AccessTokenSearchRes);
    rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}