// Version
syntax = "proto3";

// Package name
option go_package = "github.com/TGRZiminiar/go-mc-kafka";

// Structures
message IsAvailableToSellReq {
    string playerId = 1;
    string itemId = 2;
}

message IsAvailableToSellRes {
    bool isAvailale = 1;
}

// Methods
service InventoryGrpcService {
    rpc IsAvailableToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes);
}